Fix: error text overflowing out of div

--- a/05-javascript-a-ds-new/0-certification-projects/2-build-a-roman-numeral-converter/code/styles.css
+++ b/05-javascript-a-ds-new/0-certification-projects/2-build-a-roman-numeral-converter/code/styles.css
@@ -49,12 +49,17 @@ main {
     padding: 12px 0;
 }
 
+.hide {
+    display: none;
+}
+
 #output {
     font-family: 'Lato', Helvetica, Arial, sans-serif;
-    height: 56pt;
-    line-height: 56pt;
+    min-width: 56pt;
     margin-top: 20px;   
+    padding: 20px 0;
     justify-content: center;
+    overflow-wrap: break-word;
 }
 
 .error {
@@ -62,8 +67,4 @@ main {
     background-color: #ffadad;
     font-size: 24pt;
     border: 3px solid #850000;
-}
-
-.hide {
-    display: none;
 }
